--- a/report/report_final.tex
+++ b/report/report_final.tex
@@ -34,7 +34,7 @@
 % Introduction - Motivate and introduce the problem you are solving. Very briefly summarize your methodology, your experiments, and your important results.
 \section{Introduction}
 
-Botnets are a significant source of network attacks, consisting of several compromised computers capable of performing coordingated attaks, including DDoS attacks, click-fraud scams, spamming, and identity theft. A key component in preventing attacks from botnets requires methods to detect them.
+Botnets are a significant source of network attacks, consisting of several compromised computers capable of performing coordinated attacks, including DDoS attacks, click-fraud scams, spamming, and identity theft. A key component in preventing attacks from botnets requires methods to detect them.
 
 Modern botnet detection methods still primarily rely on heuristics built on the manual analysis of traffic patterns, malware code, etc. Machine learning approaches help automate the process, relieving some of the manual labor placed on analysts while showing promise in their ability to detect botnets. However, most machine learning algorithms require inputs defined in the euclidean domain. Therefore, when used on network data, machine learning algorithms fail to take into account crucial relational information between nodes in the network. 
 
@@ -51,7 +51,7 @@ All of the results presented here as well as additional analysis can be found on
 
 Representation Learning was popularized in Natural Language Processing \cite{Camacho},\cite{Madelbaum}. Interestingly, words that are similar to each other have similar embeddings while dissimilar words have dissimilar embeddings. The introduction of the word2vec Skip-gram model \cite{Mikolov} provided more efficient and accurate vector representations.  Researchers have applied these techniques in other networks, especially in biomedical networks \cite{Perkins},\cite{Yue}.
 
-Node embeddings have been used in the context of network security, generally as features in supervised learning problems \cite{Skorniakov}. To the best of our knowledge, however, there is not any research examining the node embeddings themselves. We aim to close this gap, hoping that node embeddings of nodes inside the botnet are similar to eachother and dissimilar from nodes elsewhere in the network.
+Node embeddings have been used in the context of network security, generally as features in supervised learning problems \cite{Skorniakov}. To the best of our knowledge, however, there is not any research examining the node embeddings themselves. We aim to close this gap, hoping that node embeddings of nodes inside the botnet are similar to each other and dissimilar from nodes elsewhere in the network.
 
 % Methodology
 \section{Methodology}
@@ -61,7 +61,7 @@ Node embeddings have been used in the context of network security, generally as 
 In scenarios 10 and 11 in the CTU-13 dataset, it is assumed that the adversary is capable of performing DDoS attacks. Specifically, the adversary uses an IRC protocol and is capable of performing either UDP or ICMP flood attacks \cite{Garcia}. In the IoT-23 dataset, the Mirai botnet has a C2 structure and uses UDP, HTTP, or TCP flooding. Okiru is a Mirai variant and the same model is assumed. The Torii botnet also has a C2 structure but uses telnet flooding attacks.
 
 \subsection{Data}
-We utilize two botnet scenarios provided as part of the CTU-13 dataset \cite{Garcia}. This dataset provides large captures of real botnet traffic mixed with normal traffic and background traffic. Each of the thirteen scenarios included in the dataset have different characterists. We focus on scenario 10 and scenario 11, both of which are IRC botnets performing DDoS attacks. Scenario 10 contains 10 nodes in the botnet, which is performing a UDP DDoS attack, and contains 6 normal nodes. Scenario 11 contains three nodes in the botnet, which is performing a ICMP DDoS attack, and contains six normal nodes. All other IPs in each dataset are background nodes. Using this flow data, we constructed a graph by placing an edge between any two IPs where there was a packet sent between them. 
+We utilize two botnet scenarios provided as part of the CTU-13 dataset \cite{Garcia}. This dataset provides large captures of real botnet traffic mixed with normal traffic and background traffic. Each of the thirteen scenarios included in the dataset have different characteristics. We focus on scenario 10 and scenario 11, both of which are IRC botnets performing DDoS attacks. Scenario 10 contains 10 nodes in the botnet, which is performing a UDP DDoS attack, and contains 6 normal nodes. Scenario 11 contains three nodes in the botnet, which is performing a ICMP DDoS attack, and contains six normal nodes. All other IPs in each dataset are background nodes. Using this flow data, we constructed a graph by placing an edge between any two IPs where there was a packet sent between them. 
 
 Another dataset we use is the IoT-23 dataset \cite{IoT-23}. This dataset contains multiple types of malicious IoT network traffic in addition to botnets. As a result of that is the total size of this dataset is huge and it requests a tremendous computing time to process and train. Therefore, we try to reduce the dataset first before train the model. We separate the dataset into small groups and use some basic statistic techniques to count which part has the densest botnet and use that part for our final training. Finally, we use scenarios pertaining to the Mirai, Okiru, and Torii botnets. 
 
@@ -99,7 +99,7 @@ We performed a similar analysis on scenario 11 using both DeepWalk and Node2Vec.
 
 \subsection{IoT-23 Dataset}
 
-We performed a similar analysis of Deepwalk embeddings on the IoT-23 Dataset. However, the embeddings do not give as clear of a result as the CTU-13 embeddings. We use the similar techniques as before and analyzed the similarity between botnet nodes and normal/background nodes by calculating the pairwise euclidean and cosine distances between them. However, the nodes in the botnet do not appear to be any more similar to each other compared to nodes else where in the network. This could be due to the Mirai botnet having a structure that is more difficult to capture, the fact that the Mirai botnet is more sophisticated and its traffic appears more like normal traffic better than botnets in CTU-13. We were also only able to try one set up hyperparameters due to computational limitations. Other combinations of parameters may produce better results. 
+We performed a similar analysis of Deepwalk embeddings on the IoT-23 Dataset. However, the embeddings do not give as clear of a result as the CTU-13 embeddings. We use the similar techniques as before and analyzed the similarity between botnet nodes and normal/background nodes by calculating the pairwise euclidean and cosine distances between them. However, the nodes in the botnet do not appear to be any more similar to each other compared to nodes elsewhere in the network. This could be due to the Mirai botnet having a structure that is more difficult to capture, the fact that the Mirai botnet is more sophisticated and its traffic appears more like normal traffic better than botnets in CTU-13. We were also only able to try one set up hyperparameters due to computational limitations. Other combinations of parameters may produce better results. 
 
 % Conclusion - Summarize your work and your results. Indicate any future directions.
 \section{Conclusion}
