--- a/report/report_final.tex
+++ b/report/report_final.tex
@@ -63,7 +63,7 @@ In scenarios 10 and 11 in the CTU-13 dataset, it is assumed that the adversary i
 \subsection{Data}
 We utilize two botnet scenarios provided as part of the CTU-13 dataset \cite{Garcia}. This dataset provides large captures of real botnet traffic mixed with normal traffic and background traffic. Each of the thirteen scenarios included in the dataset have different characteristics. We focus on scenario 10 and scenario 11, both of which are IRC botnets performing DDoS attacks. Scenario 10 contains 10 nodes in the botnet, which is performing a UDP DDoS attack, and contains 6 normal nodes. Scenario 11 contains three nodes in the botnet, which is performing a ICMP DDoS attack, and contains six normal nodes. All other IPs in each dataset are background nodes. Using this flow data, we constructed a graph by placing an edge between any two IPs where there was a packet sent between them. 
 
-Another dataset we use is the IoT-23 dataset \cite{IoT-23}. This dataset contains multiple types of malicious IoT network traffic in addition to botnets. As a result of that is the total size of this dataset is huge and it requests a tremendous computing time to process and train. Therefore, we try to reduce the dataset first before train the model. We separate the dataset into small groups and use some basic statistic techniques to count which part has the densest botnet and use that part for our final training. Finally, we use scenarios pertaining to the Mirai, Okiru, and Torii botnets. 
+Another dataset we use is the IoT-23 dataset \cite{IoT-23}. This dataset contains multiple types of malicious IoT network traffic in addition to botnets. As a result of that, the total size of this dataset is huge and it requests a tremendous computing time to process and train. Therefore, we try to reduce the dataset first before train the model. We separate the dataset into small groups and use some basic statistic techniques to count which part has the densest botnet and use that part for our final training. Finally, we use scenarios pertaining to the Mirai, Okiru, and Torii botnets. 
 
 \subsection{Algorithms}
  \subsubsection{DeepWalk}
@@ -78,7 +78,7 @@ Node2Vec \cite{Grover} is similar to DeepWalk in the sense that it trains a Skip
 
 Both DeepWalk and Node2Vec were trained on scenario 10 and scenario 11 from the CTU-13 dataset. DeepWalk was run using several different combinations of hyperparameters then the embeddings were inspected visually. Node2Vec, however, was only run on one set of hyperparameters due to the algorithm being computationally expensive. Similarly, Node2Vec was only run on scenario 11 because of memory limitations  that arise when run on scenario 10.
 
-We analyzed the similarity between botnet nodes and normal/background nodes by calculating the pairwise euclidean and cosine distances between them. The pairwise euclidean distance between embeddings produced by DeepWalk on scenario 10  are shown below in Figure 1. As we can see, the nodes inside the botnet are very similar to each other while being visibly different from the normal nodes. The distance between botnet nodes and background nodes are even more pronounced and can the results can be found online.
+We analyzed the similarity between botnet nodes and normal/background nodes by calculating the pairwise euclidean and cosine distances between them. The pairwise euclidean distance between embeddings produced by DeepWalk on scenario 10  are shown below in Figure 1. As we can see, the nodes inside the botnet are very similar to each other while being visibly different from the normal nodes. The distance between botnet nodes and background nodes are even more pronounced and the results can be found online.
 
 
 \includegraphics[scale=0.7]{1a.png}
@@ -99,7 +99,7 @@ We performed a similar analysis on scenario 11 using both DeepWalk and Node2Vec.
 
 \subsection{IoT-23 Dataset}
 
-We performed a similar analysis of Deepwalk embeddings on the IoT-23 Dataset. However, the embeddings do not give as clear of a result as the CTU-13 embeddings. We use the similar techniques as before and analyzed the similarity between botnet nodes and normal/background nodes by calculating the pairwise euclidean and cosine distances between them. However, the nodes in the botnet do not appear to be any more similar to each other compared to nodes elsewhere in the network. This could be due to the Mirai botnet having a structure that is more difficult to capture, the fact that the Mirai botnet is more sophisticated and its traffic appears more like normal traffic better than botnets in CTU-13. We were also only able to try one set up hyperparameters due to computational limitations. Other combinations of parameters may produce better results. 
+We performed a similar analysis of Deepwalk embeddings on the IoT-23 Dataset. However, the embeddings do not give as clear of a result as the CTU-13 embeddings. We use the similar techniques as before and analyzed the similarity between botnet nodes and normal/background nodes by calculating the pairwise euclidean and cosine distances between them. However, the nodes in the botnet do not appear to be any more similar to each other compared to nodes elsewhere in the network. This could be due to the Mirai botnet having a structure that is more difficult to capture, the fact that the Mirai botnet is more sophisticated and its traffic appears more like normal traffic better than botnets in CTU-13. We were also only able to try one set of hyperparameters due to computational limitations. Other combinations of parameters may produce better results. 
 
 % Conclusion - Summarize your work and your results. Indicate any future directions.
 \section{Conclusion}
