--- a/report/report_final.tex
+++ b/report/report_final.tex
@@ -38,7 +38,7 @@ Botnets are a significant source of network attacks, consisting of several compr
 
 Modern botnet detection methods still primarily rely on heuristics built on the manual analysis of traffic patterns, malware code, etc. Machine learning approaches help automate the process, relieving some of the manual labor placed on analysts while showing promise in their ability to detect botnets. However, most machine learning algorithms require inputs defined in the euclidean domain. Therefore, when used on network data, machine learning algorithms fail to take into account crucial relational information between nodes in the network. 
 
-Our project involves studying the node embeddings produced by two of the most commonly used graph embedding algorithms, DeepWalk and Node2Vec. Botnets generally have different structural properties than background networks. For example, centralized botnets have a strong hierarchical structre, while decentralized botnets are designed for efficient diffusion of information. If the botnet has different structural properties than the other nodes in the network, the node embeddings produced by DeepWalk and Node2Vec should be different than nodes elsewhere in the network. 
+Our project involves studying the node embeddings produced by two of the most commonly used graph embedding algorithms, DeepWalk and Node2Vec. Botnets generally have different structural properties than background networks. For example, centralized botnets have a strong hierarchical structure, while decentralized botnets are designed for efficient diffusion of information. If the botnet has different structural properties than the other nodes in the network, the node embeddings produced by DeepWalk and Node2Vec should be different than nodes elsewhere in the network. 
 
 We trained both DeepWalk \cite{Perozzi} and Node2Vec \cite{Grover} on two scenarios provided as part of the CTU-13 \cite{Garcia} dataset, both of which contain an IRC botnet. The embeddings of nodes in the botnet produced by both algorithms are compared to the embeddings of normal and background nodes by visually inspecting them as well as examining the pointwise euclidean and cosine distances between them. We find that both of these algorithms produce botnet embeddings that are reasonably different from other nodes in the network. 
 
@@ -63,7 +63,7 @@ In scenarios 10 and 11 in the CTU-13 dataset, it is assumed that the adversary i
 \subsection{Data}
 We utilize two botnet scenarios provided as part of the CTU-13 dataset \cite{Garcia}. This dataset provides large captures of real botnet traffic mixed with normal traffic and background traffic. Each of the thirteen scenarios included in the dataset have different characteristics. We focus on scenario 10 and scenario 11, both of which are IRC botnets performing DDoS attacks. Scenario 10 contains 10 nodes in the botnet, which is performing a UDP DDoS attack, and contains 6 normal nodes. Scenario 11 contains three nodes in the botnet, which is performing a ICMP DDoS attack, and contains six normal nodes. All other IPs in each dataset are background nodes. Using this flow data, we constructed a graph by placing an edge between any two IPs where there was a packet sent between them. 
 
-Another dataset we use is the IoT-23 dataset \cite{IoT-23}. This dataset contains multiple types of malicious IoT network traffic in addition to botnets. As a result of that, the total size of this dataset is huge and it requests a tremendous computing time to process and train. Therefore, we try to reduce the dataset first before train the model. We separate the dataset into small groups and use some basic statistic techniques to count which part has the densest botnet and use that part for our final training. Finally, we use scenarios pertaining to the Mirai, Okiru, and Torii botnets. 
+Another dataset we use is the IoT-23 dataset \cite{IoT-23}. This dataset contains multiple types of malicious IoT network traffic in addition to botnets. As a result of that, the total size of this dataset is huge and it requests a tremendous computing time to process and train. Therefore, we try to reduce the dataset first before we train the model. We separate the dataset into small groups and use some basic statistic techniques to count which part has the densest botnet and use that part for our final training. Finally, we use scenarios pertaining to the Mirai, Okiru, and Torii botnets. 
 
 \subsection{Algorithms}
  \subsubsection{DeepWalk}
