--- a/report/report_final.tex
+++ b/report/report_final.tex
@@ -38,11 +38,11 @@ Botnets are a significant source of network attacks, consisting of several compr
 
 Modern botnet detection methods still primarily rely on heuristics built on the manual analysis of traffic patterns, malware code, etc. Machine learning approaches help automate the process, relieving some of the manual labor placed on analysts while showing promise in their ability to detect botnets. However, most machine learning algorithms require inputs defined in the euclidean domain. Therefore, when used on network data, machine learning algorithms fail to take into account crucial relational information between nodes in the network. 
 
-Our project involves studying the node embeddings produced by two of the most commonly used graph embedding algorithms, DeepWalk and Node2Vec. Botnets generally have different structural properties than background networks. For example, centralized botnets have a strong hierarchical structre, while decentralized botnets are designed for efficient diffusion of information. If the botnet has different structural properties than the other nodes in the network, the node embeddings produced by DeepWalk and Node2Vec should be different than nodes elsewhere in the network. 
+Our project involves studying the node embeddings produced by two of the most commonly used graph embedding algorithms, DeepWalk and Node2Vec. Botnets generally have different structural properties than background networks. For example, centralized botnets have a strong hierarchical structure, while decentralized botnets are designed for efficient diffusion of information. If the botnet has different structural properties than the other nodes in the network, the node embeddings produced by DeepWalk and Node2Vec should be different than nodes elsewhere in the network. 
 
 We trained both DeepWalk \cite{Perozzi} and Node2Vec \cite{Grover} on two scenarios provided as part of the CTU-13 \cite{Garcia} dataset, both of which contain an IRC botnet. The embeddings of nodes in the botnet produced by both algorithms are compared to the embeddings of normal and background nodes by visually inspecting them as well as examining the pointwise euclidean and cosine distances between them. We find that both of these algorithms produce botnet embeddings that are reasonably different from other nodes in the network. 
 
-We also trained DeepWalk on the Aposemat \cite{IoT-23} dataset, which contains three botnets: Mirai, Okiru and Torii. However, DeepWalk failed to produced botnet embeddings that are reasonably different from other nodes in the network.
+We also trained DeepWalk on the IpT-23 Aposemat \cite{IoT-23} dataset, which contains three botnets: Mirai, Okiru and Torii. However, DeepWalk failed to produced botnet embeddings that are reasonably different from other nodes in the network.
 
 All of the results presented here as well as additional analysis can be found online at \url{https://github.com/printfer/CS6490_NetworkSecurity_FinalProject}
 
@@ -63,7 +63,7 @@ In scenarios 10 and 11 in the CTU-13 dataset, it is assumed that the adversary i
 \subsection{Data}
 We utilize two botnet scenarios provided as part of the CTU-13 dataset \cite{Garcia}. This dataset provides large captures of real botnet traffic mixed with normal traffic and background traffic. Each of the thirteen scenarios included in the dataset have different characteristics. We focus on scenario 10 and scenario 11, both of which are IRC botnets performing DDoS attacks. Scenario 10 contains 10 nodes in the botnet, which is performing a UDP DDoS attack, and contains 6 normal nodes. Scenario 11 contains three nodes in the botnet, which is performing a ICMP DDoS attack, and contains six normal nodes. All other IPs in each dataset are background nodes. Using this flow data, we constructed a graph by placing an edge between any two IPs where there was a packet sent between them. 
 
-Another dataset we use is the IoT-23 dataset \cite{IoT-23}. This dataset contains multiple types of malicious IoT network traffic in addition to botnets. As a result of that, the total size of this dataset is huge and it requests a tremendous computing time to process and train. Therefore, we try to reduce the dataset first before train the model. We separate the dataset into small groups and use some basic statistic techniques to count which part has the densest botnet and use that part for our final training. Finally, we use scenarios pertaining to the Mirai, Okiru, and Torii botnets. 
+Another dataset we use is the IoT-23 dataset \cite{IoT-23}. This dataset contains multiple types of malicious IoT network traffic in addition to botnets. As a result of that, the total size of this dataset is huge and it requests a tremendous computing time to process and train. Therefore, we try to reduce the dataset first before training the model. We separate the dataset into small groups and use some basic statistic techniques to count which part has the densest botnet and use that part for our final training. Finally, we use scenarios pertaining to the Mirai, Okiru, and Torii botnets. 
 
 \subsection{Algorithms}
  \subsubsection{DeepWalk}
@@ -76,7 +76,7 @@ Node2Vec \cite{Grover} is similar to DeepWalk in the sense that it trains a Skip
 \section{Experiments and Discussion}
 \subsection{CTU-13 Dataset}
 
-Both DeepWalk and Node2Vec were trained on scenario 10 and scenario 11 from the CTU-13 dataset. DeepWalk was run using several different combinations of hyperparameters then the embeddings were inspected visually. Node2Vec, however, was only run on one set of hyperparameters due to the algorithm being computationally expensive. Similarly, Node2Vec was only run on scenario 11 because of memory limitations  that arise when run on scenario 10.
+Both DeepWalk and Node2Vec were trained on scenario 10 and scenario 11 from the CTU-13 dataset. DeepWalk was run using several different combinations of hyperparameters and then the embeddings were inspected visually. Node2Vec, however, was only run on one set of hyperparameters due to the algorithm being computationally expensive. Similarly, Node2Vec was only run on scenario 11 because of memory limitations  that arise when run on scenario 10.
 
 We analyzed the similarity between botnet nodes and normal/background nodes by calculating the pairwise euclidean and cosine distances between them. The pairwise euclidean distance between embeddings produced by DeepWalk on scenario 10  are shown below in Figure 1. As we can see, the nodes inside the botnet are very similar to each other while being visibly different from the normal nodes. The distance between botnet nodes and background nodes are even more pronounced and the results can be found online.
 
@@ -99,12 +99,12 @@ We performed a similar analysis on scenario 11 using both DeepWalk and Node2Vec.
 
 \subsection{IoT-23 Dataset}
 
-We performed a similar analysis of Deepwalk embeddings on the IoT-23 Dataset. However, the embeddings do not give as clear of a result as the CTU-13 embeddings. We use the similar techniques as before and analyzed the similarity between botnet nodes and normal/background nodes by calculating the pairwise euclidean and cosine distances between them. However, the nodes in the botnet do not appear to be any more similar to each other compared to nodes elsewhere in the network. This could be due to the Mirai botnet having a structure that is more difficult to capture, the fact that the Mirai botnet is more sophisticated and its traffic appears more like normal traffic better than botnets in CTU-13. We were also only able to try one set of hyperparameters due to computational limitations. Other combinations of parameters may produce better results. 
+We performed a similar analysis of Deepwalk embeddings on the IoT-23 Dataset. However, the embeddings do not give as clear of a result as the CTU-13 embeddings. We use the similar techniques as before and analyzed the similarity between botnet nodes and normal/background nodes by calculating the pairwise euclidean and cosine distances between them. However, the nodes in the botnet do not appear to be any more similar to each other compared to nodes elsewhere in the network. This could be due to the Mirai botnet having a structure that is more difficult to capture. The Mirai botnet is more sophisticated and its traffic appears more like normal traffic compared to botnets in CTU-13. We were also only able to try one set of hyperparameters due to computational limitations. Other combinations of parameters may produce better results. 
 
 % Conclusion - Summarize your work and your results. Indicate any future directions.
 \section{Conclusion}
 
-Using two scenarios from the CTU-13 dataset, we trained DeepWalk and Node2Vec embeddings. We compared the embeddings of nodes in the botnet against other nodes in the network. This was done by calculating the pairwise euclidean distance between them. The DeepWalk embeddings of botnet nodes differ from other nodes significantly enough that the differences can be seen visually, suggesting that DeepWalk embeddings adequately captures the structural differences and similarities between nodes and can possibly be used to identify botnets within networks. However, for more sophisticated IoT botnets such as Mirai the results are not as clear. \newline
+Using two scenarios from the CTU-13 dataset, we trained DeepWalk and Node2Vec embeddings. We compared the embeddings of nodes in the botnet against other nodes in the network. This was done by calculating the pairwise euclidean distance between them. The DeepWalk embeddings of botnet nodes differ from other nodes significantly enough that the differences can be seen visually, suggesting that DeepWalk embeddings adequately capture the structural differences and similarities between nodes and can possibly be used to identify botnets within networks. However, for more sophisticated IoT botnets such as Mirai the results are not as clear. \newline
 
 Future work might include searching over a wider space of hyperparameters in order to examine if there exists a combination that produces better embeddings, especially for the more computationally expensive Node2Vec. Also, we might explore the embeddings of botnets that have different structures, such as P2P botnets and other IoT botnets. 
 
