--- a/report/report_final.tex
+++ b/report/report_final.tex
@@ -42,7 +42,7 @@ Our project involves studying the node embeddings produced by two of the most co
 
 We trained both DeepWalk \cite{Perozzi} and Node2Vec \cite{Grover} on two scenarios provided as part of the CTU-13 \cite{Garcia} dataset, both of which contain an IRC botnet. The embeddings of nodes in the botnet produced by both algorithms are compared to the embeddings of normal and background nodes by visually inspecting them as well as examining the pointwise euclidean and cosine distances between them. We find that both of these algorithms produce botnet embeddings that are reasonably different from other nodes in the network. 
 
-We also trained DeepWalk on the IpT-23 Aposemat \cite{IoT-23} dataset, which contains three botnets: Mirai, Okiru and Torii. However, DeepWalk failed to produced botnet embeddings that are reasonably different from other nodes in the network.
+We also trained DeepWalk on the IoT-23 Aposemat \cite{IoT-23} dataset, which contains three botnets: Mirai, Okiru and Torii. However, DeepWalk failed to produced botnet embeddings that are reasonably different from other nodes in the network.
 
 All of the results presented here as well as additional analysis can be found online at \url{https://github.com/printfer/CS6490_NetworkSecurity_FinalProject}
 
